--- a/index.html
+++ b/index.html
@@ -353,10 +353,12 @@
             </div>
         </footer>
         <div class="lgpd-info">
-            <p>Este site utiliza cookies para a análise de uso e anúncios.</p>
-            <div>
-                <button class="lgpd-personalizar">Personalizar</button>
-            <button class="lgpd-aceitar">Continuar</button>
+            <div class="lgpd-content">
+                <p>Este site utiliza cookies para a análise de uso e anúncios.</p>
+                <div>
+                    <button class="lgpd-personalizar">Personalizar</button>
+                <button class="lgpd-aceitar">Continuar</button>
+            </div>
             </div>
         </div>
     </main>
