Menu responsivo (por Tatiane)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li class="menu-item"><a class="botao-menu" href="#gabi--2">Contratos</a></li>
                     <li class="menu-item"><a class="botao-menu" href="#vit--1">Blockchain</a></li>
                 </ul>
+                <span class="menu-hamburguer"></span>
             </nav>
             <div class="hero-content">
                 <h1 class="titulo-sm gray-50">Legislação de Software e Serviços de TI</h1>
@@ -362,6 +363,6 @@
             </div>
         </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./menu.js"></script>
 </body>
 </html>
