conteúdo da gabriela adicionado

--- a/index.html
+++ b/index.html
@@ -406,9 +406,7 @@
             </header>
             <section>
               <p class="gray-50 texto-section">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s
+                Este trabalho se concentra na responsabilidade legal de prestadores de serviços de TI e nos contratos que regem esses serviços. Exploraremos os elementos chave dos contratos de serviços de TI, incluindo acordos de nível de serviços (SLAs) e cláusulas.
               </p>
             </section>
           </section>
